# merlion-kernel

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  README_CN.md  limine.conf  linker-limine.ld  linker-loongarch.ld  linker-pi.ld  linker-riscv.ld  pi-config.txt
.cargo/: config.toml
docs/: ai-native-os-en.md  ai-native-os.md  architecture.md  cross-compile.md  deep-dive-roadmap.md  docker-on-merlionos.md  forth-guide-en.md  forth-guide.md  launch-post.md  libmerlion-api.md  milestones-v11-v15-en.md  milestones-v11-v15.md  milestones-v16-v25-en.md  milestones-v16-v25.md  milestones-v26-v45-en.md  milestones-v26-v45.md  milestones-v78-v100-en.md  milestones-v78-v100.md  milestones-v8-v10-en.md  milestones-v8-v10.md  real-hardware-roadmap-en.md  real-hardware-roadmap.md  roadmap-envoy.md  roadmap-networking.md  roadmap-optimization.md  roadmap-raspberry-pi-en.md  roadmap-raspberry-pi.md  roadmap-rust-std.md  roadmap-userspace.md  syscall-reference.md  v8-real-hardware-plan.md
src/: acl.rs  acpi.rs  acpi_ext.rs  acpi_tables.rs  agent.rs  agent_sched.rs  ahci.rs  ai_admin.rs  ai_heal.rs  ai_http.rs  ai_man.rs  ai_monitor.rs  ai_proxy.rs  ai_shell.rs  ai_syscall.rs  ai_workflow.rs  alloc_track.rs  allocator.rs  amdgpu.rs  amdgpu_compute.rs  ansi.rs  apic_timer.rs  arch_aarch64.rs  arch_loongarch.rs  arch_riscv64.rs  audio.rs  audio_engine.rs  autocomplete.rs  bash.rs  bench.rs  bgp.rs  blake3.rs  blkdev.rs  bluetooth.rs  bmp.rs  bonding.rs  boot_info_ext.rs  boot_limine.rs  bpf.rs  bridge.rs  (+292 more)
tools/: README.md  llm-proxy.py  (+3 more)
(+2 files in other folders)
