[package]
name = "merlion-kernel"
version = "0.1.0"
edition = "2021"
authors = ["MerlionOS Contributors"]
description = "A Singapore-inspired hobby operating system kernel"

[dependencies]
bootloader = "0.9"
x86_64 = "0.14"
spin = "0.9"
pic8259 = "0.10"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
