[package]
name = "merlion-kernel"
version = "0.1.0"
edition = "2021"
authors = ["MerlionOS Contributors"]
description = "A Singapore-inspired hobby operating system kernel"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
x86_64 = "0.14"
spin = "0.9"
pic8259 = "0.10"
linked_list_allocator = "0.10"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "merlion-kernel"
path = "src/main.rs"

[[bin]]
name = "merlion-limine"
path = "src/main_limine.rs"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none",
]
test-success-exit-code = 33
